# setup-eval

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  README.md  SECURITY.md  how-can-you-know-its-safe-to-use-this-tool.md  install.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.cursor/commands/: eval-setup-lint.md  eval-setup-review.md  eval-setup-security.md  eval-skill.md  lint.md  review.md  security.md  setup-eval-lint.md
.github/: pull_request_template.md
.github/actions/harness-eval/: action.yml
.github/actions/setup-eval/: action.yml
.github/workflows/: ci.yml  publish.yml  release.yml
commands/: eval-setup-lint.md  eval-setup-review.md  eval-setup-security.md  eval-skill.md  lint.md  review.md  security.md  setup-eval-lint.md
commands/eval-setup-lint/: command.md
commands/eval-setup-review/: command.md
commands/eval-setup-security/: command.md
commands/eval-skill/: command.md
docs/: THREAT_MODEL.md  rules-reference.md
future-plans/adjusting-to-dynamic-workflows/: evaluate-generated-workflows.md  preflight-check.md  skills-quality-gate.md  spec.md
future-plans/content-intelligence/: spec.md
future-plans/distributable-packaging/: spec.md
future-plans/impact-dimension/: spec.md
future-plans/multi-tool-expansion/: spec.md
future-plans/runner-abstraction/: spec.md
future-plans/sarif-output/: spec.md
future-plans/security-benchmarks/: spec.md
future-plans/setup-recommend/: spec.md
scripts/: release.py
skills/eval-setup/: SKILL.md  report-format.md
skills/eval-setup-lint/: SKILL.md
skills/eval-setup-review/: SKILL.md  report-format.md
skills/eval-setup-security/: SKILL.md
skills/eval-setup/rubric/: agents-rubric.md  claude-md-rubric.md  commands-rubric.md  hooks-rubric.md  skills-rubric.md
skills/eval-setup/scripts/: ensure_deps.py  run_assessment.py
skills/eval-skill/: SKILL.md  report-format.md
skills/lint/: SKILL.md  report-format.md
skills/lint/scripts/: ensure_deps.py  (+1 more)
skills/review/: SKILL.md  report-format.md
skills/security/: SKILL.md  report-format.md
skills/setup-eval-lint/: SKILL.md
skills/setup-eval-review/: report-format.md
skills/setup-eval-security/: SKILL.md
src/harness_eval/: __init__.py  watch.py
src/harness_eval_lab/: cli.py  watch.py
src/setup_eval/: __init__.py  watch.py
tests/: conftest.py  test_agent_rules.py  test_agentic_security_rules.py  test_ci_readiness.py  test_command_rules.py  test_content_duplicate.py  test_context_tracker.py  test_cursor_discovery.py  test_enforce.py  test_fingerprint.py  test_inspection.py  test_integration.py  test_multi_assistant_discovery.py  test_negative_only_rule.py  test_new_rules.py  test_new_rules_v2.py  test_new_rules_v3.py  test_new_rules_v4.py  test_parsing.py  test_path_safety.py  test_quality_rules.py  test_recursive_discovery.py  test_report_card.py  test_rubric.py  test_rules_parametrized.py  test_sarif_output.py  test_security_fixtures.py  test_security_integration.py  test_security_rules.py  test_setup.py  test_system.py  test_third_party_discovery.py  test_watch.py
(+331 files in other folders)
