[project]
name = "setup-eval"
version = "3.3.0"
description = "Evaluate and compare AI agent setups through experiments, inspections, and rubric scoring."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
    "scikit-learn>=1.0",
    "google-genai>=1.0",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.scripts]
setup-eval = "harness_eval_lab.cli:cli"

[project.optional-dependencies]
watch = [
    "watchfiles>=1.0",
]
yara = [
    "yara-python>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness_eval_lab"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/harness_eval_lab/inspection/rules/**" = ["E501"]
"src/harness_eval_lab/inspection/engine.py" = ["E501"]
"src/harness_eval_lab/inspection/types.py" = ["UP042"]
"src/harness_eval_lab/rubric/dimensions.py" = ["E501"]
"src/harness_eval_lab/cli.py" = ["E501"]
"tests/test_rubric.py" = ["E501"]
"skills/**" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["harness_eval_lab"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
